Don't make cmake find SDL
cmake wasn't finding the installed SDL library in Trisquel, so I'm
linking to it by name, instead of using 'find_package'.

(Was switching to cmake a good idea?...)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,8 +36,7 @@ else(USE_LOCAL_CP)
 endif(USE_LOCAL_CP)
 
 
-find_package (SDL REQUIRED)
-set (EXTRA_LIBS ${EXTRA_LIBS} m ${SDL_LIBRARIES} SDL_gfx)
+set (EXTRA_LIBS ${EXTRA_LIBS} m SDL SDL_gfx)
 
 set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu99")
 set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall")
