link with librt, to support some systems.
on Parabola GNU/Linux, linking with librt is required to use a certain
function in spacedolphin. This library ships with glibc, and does not
break the build process in Trisquel 5.5.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,7 +35,7 @@ else(USE_LOCAL_CP)
 
 endif(USE_LOCAL_CP)
 
-set (EXTRA_LIBS ${EXTRA_LIBS} m SDL cairo)
+set (EXTRA_LIBS ${EXTRA_LIBS} m rt SDL cairo)
 
 #set (CMAKE_BUILD_TYPE DEBUG)
 set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu99")
